manifest/v1.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello-v1-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-test-v1
  template:
    metadata:
      labels:
        app: hello-test-v1
    spec:
      containers:
      - name: hello-v1
        image: aa332266/hello:v1-test
  strategy:
    blueGreen:
      # activeService specifies the service to update with the new template hash at time of promotion.
      # This field is mandatory for the blueGreen update strategy.
      activeService: rollout-v1-blue
      # previewService specifies the service to update with the new template hash before promotion.
      # This allows the preview stack to be reachable without serving production traffic.
      # This field is optional.
      previewService: rollout-v1-green
      # autoPromotionEnabled disables automated promotion of the new stack by pausing the rollout
      # immediately before the promotion. If omitted, the default behavior is to promote the new
      # stack as soon as the ReplicaSet are completely ready/available.
      # Rollouts can be resumed using: `kubectl argo rollouts resume ROLLOUT`
      autoPromotionEnabled: false
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-v1-blue
spec:
  selector:
    app: hello-test-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-v1-green
spec:
  selector:
    app: hello-test-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
