manifest/v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v2-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-test-v2
  template:
    metadata:
      labels:
        app: hello-test-v2
    spec:
      containers:
      - name: hello-v2
        image: aa332266/hello:v2
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-v2
spec:
  selector:
    app: hello-test-v2
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8080
