manifest/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.test.v1.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rollout-v1-blue
          servicePort: 80
  - host: hello.test.v2.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-service-v2
          servicePort: 80
